--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         displayPanel.value = totalDuration;
                     },
                     1854: () => {
-                        window.location.replace("./IMMORTALIZE_TRIG.html");
+                        window.location.replace("pack-t/IMMORTALIZE_TRIG.html");
                     }
                 };
 
