--- a/pack-t/IMMORTALIZE_TRIG.html
+++ b/pack-t/IMMORTALIZE_TRIG.html
@@ -171,7 +171,13 @@
                     onclick="func1()">
                     1
                 </button>
-                <button id="yellow" class="lolcool press-start-2p-regular" onclick="func2()">2</button>
+                <button
+                    title="WHAT IN THE WORLD DO YOU WANT WITH THIS BUTTON? THE MIDDLE CHILD? SOMEONE TELL ME WHAT TO MAKE THIS BUTTON DO!!!"
+                    id="yellow"
+                    class="lolcool press-start-2p-regular"
+                    onclick="func2()">
+                    2
+                </button>
                 <button
                     title="THIS WILL CRASH YOUR BROWSER"
                     id="crasher"
@@ -200,7 +206,7 @@
             }
 
             function func1() {
-                window.location.replace("./index.html");
+                window.location.replace("../index.html");
             }
 
             function func2() {
